css/styles.css
html,
body {
    height: 100%;
}


#butterfly {
    height: 200px;
    width: auto;
    position: absolute;
}

#wateringcan {
    width: 200px;
    position: fixed;
    bottom: 20%;
    left: 40%;
    user-select: none;
}


.waterdrop {
    width: 20px;
    position: absolute;
}

#net {
    height: 600px;
    width: auto;
    position: absolute;
z-index: 9999999999;
}

.apple {
    height: 50px;
    width: auto;
    position: absolute;
}

#tree {
    position: fixed;
    bottom: 20px;
    left: 50%;

}

.basket {
    width: 200px;
    position: fixed;
    bottom: 20px;
    left: 20%;

}


body {
    margin: 0px;
    background-image: url("../images/grass.png");
    background-attachment: fixed;
    background-repeat: repeat-x;
    background-position: bottom;
    overflow: hidden;
}

